@@ -7,8 +7,8 @@ perl:
   - "5.22-extras"
   - "5.20-extras"
   - "5.18-extras"
-  # - "5.16"
-  # - "5.14"
+  - "5.16"
+  - "5.14"
   # - "5.12"
 
 install:
